--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -26,20 +26,9 @@ steps:
         ticketTitle="Veracode SCA - $title"
         description="<ul><li>Overview: $overview</li><li>CVE: $cve</li><li><a href=$link>Veracode Database Link</a></li></ul>"       
                         
-        Body='[{
-          "op": "add",
-          "path": "/fields/System.Title",
-          "from": null,
-          "value": "'"$ticketTitle"'"
-        },
-        {
-          "op": "add",
-          "path": "/fields/System.Description",
-          "from": null,
-          "value": "'"$description"'"
-        }]'
+        Body='[{"op": "add","path": "/fields/System.Title","value": "'"$ticketTitle"'"},{"op": "add","path": "/fields/System.Description","value": "'"$description"'"}]'
         set -x
-        curl -X POST -H -u $Authentication 'Content-Type: application/json-patch+json' -d "$Body" $ApiUrl
+        curl -X POST -H -u $Authentication 'Content-Type: application/json-patch+json' -d "$Body" "'"$ApiUrl"'"
         set +x
         echo Ticket created.
         echo Title: $title
