--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -24,11 +24,11 @@ steps:
         link=$( jq -c  '._links.html' <<< "${vulnerabilityAsJson}" ) 
         
         ticketTitle="Veracode SCA - $title"
-        description="<ul><li>Overview: $overview</li><li>CVE: $cve</li><li><a href=$link>Veracode Database Link</a></li></ul>"       
+        description="<ul><li>Overview: $overview</li><li>CVE: $cve</li><li><a href="'"$link"'">Veracode Database Link</a></li></ul>"       
                         
         Body='[{"op": "add","path": "/fields/System.Title","value": "'"$ticketTitle"'"},{"op": "add","path": "/fields/System.Description","value": "'"$description"'"}]'
         set -x
-        curl -X POST -H -u $Authentication 'Content-Type: application/json-patch+json' -d "$Body" "'"$ApiUrl"'"
+        curl -X POST -H -u $Authentication 'Content-Type: application/json-patch+json' -d "$Body" $ApiUrl
         set +x
         echo Ticket created.
         echo Title: $title
