--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -28,7 +28,7 @@ steps:
                         
         Body='[{"op": "add","path": "/fields/System.Title","value": "'"$ticketTitle"'"},{"op": "add","path": "/fields/System.Description","value": "'"$description"'"}]'
         set -x
-        curl -X POST -H -u $Authentication 'Content-Type: application/json-patch+json' -d "$Body" $ApiUrl
+        curl -X POST -H -u "$Authentication" 'Content-Type: application/json-patch+json' -d "$Body" $ApiUrl
         set +x
         echo Ticket created.
         echo Title: $title
