--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -25,7 +25,7 @@ steps:
         link=$( jq -c  '._links.html' <<< "${vulnerabilityAsJson}" ) 
         
         ticketTitle="Veracode SCA - $title"
-        description="<ul><li>Overview: $overview</li><li>CVE: "'"$cve"'"</li><li><a href="'"$link"'">Veracode Database Link</a></li></ul>"       
+        description="<ul><li>Overview: $overview</li><li>CVE: $cve</li><li><a href=$link>Veracode Database Link</a></li></ul>"       
                         
         Body='[{
           "op": "add",
