--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -26,7 +26,7 @@ steps:
         
         ticketTitle="Veracode SCA - $title"
         description="<ul><li>Overview: $overview</li><li>CVE: $cve</li><li><a href=$link>Veracode Database Link</a></li></ul>"       
-        description=$(tr '"' '' <<<"$string")
+        description=$(tr '"' '\"' <<<"$description")
                         
         Body='[{
           "op": "add",
