--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -23,7 +23,7 @@ steps:
         overview=$( jq -r  '.overview' <<< "${vulnerabilityAsJson}" ) 
         cve=$( jq -c  '.cve' <<< "${vulnerabilityAsJson}" ) 
         cveWithoutQuotes=$( tr '"' '\"' <<< "$cve")
-        cve_link='<a href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-'"$cveWithoutQuotes"'"'">$cve</a>"
+        cve_link="<a href="'"'"https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-$cveWithoutQuotes"'"'">$cveWithoutQuotes</a>"
         echo $cve_link
         link=$( jq -c  '._links.html' <<< "${vulnerabilityAsJson}" ) 
         
