--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -13,7 +13,6 @@ steps:
     script: |      
       ApiUrl="https://dev.azure.com/${{ parameters.organization }}/${{ parameters.project_name }}/_apis/wit/workitems/"'$'"${{ parameters.issue_type }}?api-version=6.0"
       Authentication="anything:$API_CREDENTIALS"
-      echo $Authentication
       
       sca_json='${{ parameters.vulnerabilities_as_json }}'
       for encodedVulnerability in $(echo "${sca_json}" | jq -r '.[] | @base64'); do
@@ -24,9 +23,9 @@ steps:
         cve=$( jq -c  '.cve' <<< "${vulnerabilityAsJson}" ) 
         cveWithoutQuotes=$( tr -d '"' <<< "$cve")
         cveLink="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-$cveWithoutQuotes"
+        cveLink="$cveLink"
         echo $cve_link
         link=$( jq -c  '._links.html' <<< "${vulnerabilityAsJson}" ) 
-        linkWithoutQuotes=$( tr -d '"' <<< "$link")
         echo $link
         
         ticketTitle="Veracode SCA - $title"     
