--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -23,13 +23,14 @@ steps:
         cve=$( jq -c  '.cve' <<< "${vulnerabilityAsJson}" ) 
         cveWithoutQuotes=$( tr -d '"' <<< "$cve")
         cveLink="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-$cveWithoutQuotes"
-        cveLink="$cveLink"
+        cveLink='\"'"$cveLink"'\"'
         echo $cve_link
-        link=$( jq -c  '._links.html' <<< "${vulnerabilityAsJson}" ) 
-        echo $link
+        link=$( jq -c  '._links.html' <<< "${vulnerabilityAsJson}" )
+        vulnerabilityLink=$( tr -d '"' <<< "$link")
+        vulnerabilityLink='\"'"$vulnerabilityLink"'\"'
         
         ticketTitle="Veracode SCA - $title"     
-        description=$( tr '"' '\"' <<< "<ul><li>Overview: $overview</li><li>CVE: <a href=$cveLink>$cveWithoutQuotes</a></li><li><a href=$link>Veracode Database Link</a></li></ul>" )
+        description=$( tr '"' '\"' <<< "<ul><li>Overview: $overview</li><li>CVE: <a href=$cveLink>$cveWithoutQuotes</a></li><li><a href=$vulnerabilityLink>Veracode Database Link</a></li></ul>" )
         echo $description
                         
         Body='[{
