--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -34,7 +34,8 @@ steps:
         vulnerabilityTypes=$( jq -c '.vulnerabilityTypes[]' <<< "${vulnerabilityAsJson}" )
         vulnerabilityTypes=$( tr -d '"' <<< $vulnerabilityTypes ) 
         
-        vulnerabilityTypesAsString=$( IFS=$','; echo "${vulnerabilityTypes[*]}" )
+        printf -v vulnerabilityTypesAsString ', %s' "${ids[@]}"
+        vulnerabilityTypesAsString=${ids_d:2}   
         
         
         cveWithoutQuotes=$( tr -d '"' <<< "$cve")
