--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -34,7 +34,7 @@ steps:
         vulnerabilityTypes=$( jq -c '.vulnerabilityTypes[]' <<< "${vulnerabilityAsJson}" )
         vulnerabilityTypes=$( tr -d '"' <<< $vulnerabilityTypes ) 
         
-        printf -v vulnerabilityTypesAsString ', %s' "${ids[@]}"
+        printf -v vulnerabilityTypesAsString ', %s' "${vulnerabilityTypes[@]}"
         vulnerabilityTypesAsString=${vulnerabilityTypesAsString:2}   
         
         
