--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -33,6 +33,7 @@ steps:
         
         vulnerabilityTypes=$( jq -c '.vulnerabilityTypes[]' <<< "${vulnerabilityAsJson}" )
         vulnerabilityTypes=$( tr -d '"' <<< $vulnerabilityTypes ) 
+        vulnerabilityTypesAsString=""
         if [[ $vulnerabilityTypes == "" ]]; then 
           vulnerabilityTypesAsString=""
         else
