--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,3 +32,11 @@ steps:
     issue_type: 'Issue'
     organization: 'rpereira0294'
     project_name: 'Test%20Project'
+    Overview_Name: 'Descricao'
+    Vulnerability_Types_Name: 'Tipos de Vulnerabilidade'
+    Version_Range_Name: 'Versoes Afetadas'
+    Recommended_Version_Name: 'Versao Recomendada'
+    CVSS_Score_Name: 'Pontuacao CVSS'
+    CVE_Name: 'CVE'
+    Veracode_Database_Link_Name: 'Link para o banco de dados da Veracode'
+
