--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -1,5 +1,5 @@
 parameters:
-  vulnerabilities_as_json: ''
+  json_file: ''
   issue_type: ''
   organization: ''
   project_name: ''
@@ -11,6 +11,18 @@ parameters:
   CVE_Name: 'CVE'
   Veracode_Database_Link_Name: 'Veracode Database Link'
   
+- task: PowerShell@2
+  name: ReadJsonFile
+  inputs:
+    targetType: 'inline'
+    script: |
+      $SCA_JSON = Get-Content ${{ parameters.json_file }}
+      $SCA_JSON = $SCA_JSON | ConvertFrom-Json
+      $SCA_JSON = $SCA_JSON.records.vulnerabilities
+      $SCA_JSON = $SCA_JSON | ConvertTo-Json -Depth 10 -Compress
+      $SCA_JSON = $SCA_JSON.Replace("'", "")
+      Write-Host "##vso[task.setvariable variable=VULNERABILITIES_AS_JSON;isOutput=true]$SCA_JSON"
+  
 steps:
 - task: CmdLine@2
   name: CreateTickets
@@ -21,7 +33,7 @@ steps:
       ApiUrl="https://dev.azure.com/${{ parameters.organization }}/${{ parameters.project_name }}/_apis/wit/workitems/"'$'"${{ parameters.issue_type }}?api-version=6.0"
       Authentication="anything:$API_CREDENTIALS"
       
-      sca_json='${{ parameters.vulnerabilities_as_json }}'
+      sca_json="$(ReadJsonFile.VULNERABILITIES_AS_JSON)"
       for encodedVulnerability in $(echo "${sca_json}" | jq -r '.[] | @base64'); do
         vulnerabilityAsJson=$(echo "$encodedVulnerability" | base64 --decode)
         
