--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,21 +14,9 @@ steps:
   inputs:
     script: 'curl -sSL  https://download.sourceclear.com/ci.sh | SRCCLR_CI_JSON=1 sh > sca_output.json'
 
-- task: PowerShell@2
-  name: ReadJsonFile
-  inputs:
-    targetType: 'inline'
-    script: |
-      $SCA_JSON = Get-Content 'sca_output.json'
-      $SCA_JSON = $SCA_JSON | ConvertFrom-Json
-      $SCA_JSON = $SCA_JSON.records.vulnerabilities
-      $SCA_JSON = $SCA_JSON | ConvertTo-Json -Depth 10 -Compress
-      $SCA_JSON = $SCA_JSON.Replace("'", "")
-      Write-Host "##vso[task.setvariable variable=VULNERABILITIES_AS_JSON;isOutput=true]$SCA_JSON"
-
 - template : CreateWorkItems.yml  
   parameters:
-    vulnerabilities_as_json: $(ReadJsonFile.VULNERABILITIES_AS_JSON)
+    vulnerabilities_as_json: 'sca_output.json'
     issue_type: 'Issue'
     organization: 'rpereira0294'
     project_name: 'Test%20Project'
