--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -83,13 +83,13 @@ steps:
         vulnerabilityLink='\"'"$vulnerabilityLink"'\"'
         
         databaseApiResult=$( curl --silent $databaseApiLink )
-        coordHash=$( jq -c  '.artifactComponents[0]coordHash' <<< "${databaseApiResult}" )
+        coordHash=$( jq -c  '.artifactComponents[0].coordHash' <<< "${databaseApiResult}" )
         coordHash=$( tr -d '"' <<< $coordHash )
         
         cvssScore=$( jq -c '.cvssScore' <<< "${vulnerabilityAsJson}" )
                 
         
-        ticketTitle="Veracode SCA - $title"     
+        ticketTitle="Veracode SCA - $title - $coordHash"     
         description=$( tr '"' '\"' <<< "<ul><li>${{ parameters.Overview_Name }}: $overview</li><li>${{ parameters.Vulnerability_Types_Name }}: $vulnerabilityTypesAsString</li><li>${{ parameters.Vulnerable_Library_Name }}: $coordHash</li><li>${{ parameters.Version_Range_Name }}: $versionRange</li><li>${{ parameters.Recommended_Version_Name }}: $updateToVersion</li><li>${{ parameters.CVSS_Score_Name }}: $cvssScore</li><li>${{ parameters.CVE_Name }}: $cveContent</li><li><a href=$vulnerabilityLink>${{ parameters.Veracode_Database_Link_Name }}</a></li></ul>" )
         echo $description
                         
