Adding check for existing work item

--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -33,7 +33,7 @@ steps:
   inputs:
     script: |      
       createApiUrl="https://dev.azure.com/${{ parameters.organization }}/${{ parameters.project_name }}/_apis/wit/workitems/"'$'"${{ parameters.issue_type }}?api-version=6.0"
-      getWorkItemApiUrl="https://dev.azure.com/${{ parameters.organization }}/${{ parameters.project_name }}t/_apis/wit/wiql?api-version=6.1-preview.2"
+      getWorkItemApiUrl="https://dev.azure.com/${{ parameters.organization }}/${{ parameters.project_name }}/_apis/wit/wiql?api-version=6.1-preview.2"
       Authentication="anything:$API_CREDENTIALS"
       
       sca_json="$VULNERABILITIES_AS_JSON"
@@ -92,29 +92,32 @@ steps:
         
         ticketTitle="Veracode SCA - $title - $coordHash"     
         
-        getWorkItemQuery="\"query\": "Select [System.Title] From WorkItems Where [System.WorkItemType] = '${{ parameters.issue_type }}' AND [State] <> 'Closed' AND [State] <> 'Removed' AND [System.Title] = '$ticketTitle'
-        echo $getWorkItemQuery
-        set -x
-        curl --silent -X POST -H 'Content-Type: application/json' -u "$Authentication" -d "$getWorkItemQuery" $getWorkItemApiUrl
-        set +x
-        asdasd
-        description=$( tr '"' '\"' <<< "<ul><li>${{ parameters.Overview_Name }}: $overview</li><li>${{ parameters.Vulnerability_Types_Name }}: $vulnerabilityTypesAsString</li><li>${{ parameters.Vulnerable_Library_Name }}: $coordHash</li><li>${{ parameters.Version_Range_Name }}: $versionRange</li><li>${{ parameters.Recommended_Version_Name }}: $updateToVersion</li><li>${{ parameters.CVSS_Score_Name }}: $cvssScore</li><li>${{ parameters.CVE_Name }}: $cveContent</li><li><a href=$vulnerabilityLink>${{ parameters.Veracode_Database_Link_Name }}</a></li></ul>" )
-        Body='[{
-          "op": "add",
-          "path": "/fields/System.Title",
-          "value": "'"$ticketTitle"'"
-        },
-        {
-          "op": "add",
-          "path": "/fields/System.Description",
-          "value": "'"$description"'"
-        }]'
+        getWorkItemQuery="\"query\": \"Select [System.Title] From WorkItems Where [System.WorkItemType] = '${{ parameters.issue_type }}' AND [State] <> 'Closed' AND [State] <> 'Removed' AND [System.Title] = '$ticketTitle'\""
+        workItemQueryResult=$(curl --silent -X POST -H 'Content-Type: application/json' -u "$Authentication" -d "$getWorkItemQuery" $getWorkItemApiUrl)
+        existingWorkItems=$( jq -c  '.workItems[]' <<< "${workItemQueryResult}" )
+        if [ ${#existingWorkItems[@]} -eq 0 ]; then
+          description=$( tr '"' '\"' <<< "<ul><li>${{ parameters.Overview_Name }}: $overview</li><li>${{ parameters.Vulnerability_Types_Name }}: $vulnerabilityTypesAsString</li><li>${{ parameters.Vulnerable_Library_Name }}: $coordHash</li><li>${{ parameters.Version_Range_Name }}: $versionRange</li><li>${{ parameters.Recommended_Version_Name }}: $updateToVersion</li><li>${{ parameters.CVSS_Score_Name }}: $cvssScore</li><li>${{ parameters.CVE_Name }}: $cveContent</li><li><a href=$vulnerabilityLink>${{ parameters.Veracode_Database_Link_Name }}</a></li></ul>" )
+          Body='[{
+            "op": "add",
+            "path": "/fields/System.Title",
+            "value": "'"$ticketTitle"'"
+          },
+          {
+            "op": "add",
+            "path": "/fields/System.Description",
+            "value": "'"$description"'"
+          }]'
 
-        curl --silent -X POST -H 'Content-Type: application/json-patch+json' -u "$Authentication" -d "$Body" $createApiUrl
+          curl --silent -X POST -H 'Content-Type: application/json-patch+json' -u "$Authentication" -d "$Body" $createApiUrl
+
+          echo Ticket created.
+          echo Title: $ticketTitle
+          echo Description: $description
+        else
+          echo Duplicate work item found for title $ticketTitle
+        fi
         
-        echo Ticket created.
-        echo Title: $title
-        echo Description: $description
+        
         echo --------------------------
         echo ""
       done
