--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -83,7 +83,9 @@ steps:
         databaseApiLink="https://api.sourceclear.com/artifacts/components/${vulnerabilityLink##*/}"
         vulnerabilityLink='\"'"$vulnerabilityLink"'\"'
         
+        echo $databaseApiLink
         databaseApiResult=$( curl --silent $databaseApiLink )
+        echo $databaseApiResult
         coordHash=$( jq -c  '.artifactComponents[0].coordHash' <<< "${databaseApiResult}" )
         coordHash=$( tr -d '"' <<< $coordHash )
         
@@ -93,7 +95,7 @@ steps:
         ticketTitle="Veracode SCA - $title - $coordHash"     
         echo $ticketTitle
         
-        getWorkItemQuery="\"query\": \"Select [System.Title] From WorkItems Where [System.WorkItemType] = '${{ parameters.issue_type }}' AND [State] <> 'Closed' AND [State] <> 'Removed' AND [System.Title] = '$ticketTitle'\""
+        getWorkItemQuery="{\"query\": \"Select [System.Title] From WorkItems Where [System.WorkItemType] = '${{ parameters.issue_type }}' AND [State] <> 'Closed' AND [State] <> 'Removed' AND [System.Title] = '$ticketTitle'\"}"
         echo $getWorkItemQuery
         workItemQueryResult=$(curl --silent -X POST -H 'Content-Type: application/json' -u "$Authentication" -d "$getWorkItemQuery" $getWorkItemApiUrl)
         echo $workItemQueryResult
