--- a/CreateWorkItems.yml
+++ b/CreateWorkItems.yml
@@ -88,12 +88,12 @@ steps:
         coordOne=$( jq -c  '.artifactComponents[0].coordOne' <<< "${databaseApiResult}" )
         coordTwo=$( jq -c  '.artifactComponents[0].coordTwo' <<< "${databaseApiResult}" )
         libraryName=$coordOne.$coordTwo
+        libraryName=$( tr -d '"' <<< $libraryName )
         librarySource=$( jq -c  '.artifactComponents[0].componentCoordinateType' <<< "${databaseApiResult}" )
         
         cvssScore=$( jq -c '.cvssScore' <<< "${vulnerabilityAsJson}" ) 
-        
+       
         ticketTitle="Veracode SCA - $title - $libraryName"     
-        echo $ticketTitle
         
         getWorkItemQuery="{\"query\": \"Select [System.Title] From WorkItems Where [System.WorkItemType] = '${{ parameters.issue_type }}' AND [State] <> 'Closed' AND [State] <> 'Removed' AND [System.Title] = '$ticketTitle'\"}"
         echo Query:
